feat: node log cache api
